OpenSLP Change Log
------------------

Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================
11/21/00 mpeterson@caldera.com
Send dead DAAdvert as part of graceful shutdown

11/21/00 mpeterson@caldera.com
DAs now echo local registrations to other DAs (slpd as a DA also acts like
an SA for local API callers)

11/20/00 mpeterson@caldera.com
Added code to ensure we respond correctly (with AUTHENICATION_UNKNONW) when\
a request with a SPI is received

11/16/00 mpeterson@caldera.com
Changed SLPD behaviour to be less destructive on SIGHUP.  SIGHUP no longer
dumps the entire registration database on SIGHUP.  SIGHUP only causes slpd
to re-read configuration and static registration as well as perform DA
discovery.

*** TAG OpenSLP 0.7.8 ***

11/2/00 mpeterson@caldera.com
Added graceful shutdown code

11/2/00 mpeterson@caldera.com
Removed ALL memory leaks from slpd and libslp (predicate code not done yet)

10/31/00 mpeterson@caldera.com
libslp now asks slpd for known DAs before multicasting requests

10/31/00 mpeterson@caldera.com
Slpd running as a DA now performs passive discovery

10/25/00 mpeterson@caldera.com
Slpd running as an SA now re-registers all services with a new DA

10/17/00 mpeterson@caldera.com
Added code to database to utilized revised libslpattr call.  Now taglists in
AttrRqsts are honored

10/17/00 mpeterson@caldera.com
Added some significant fixes to make slpd work properly on multi-homed 
machines

*** TAG OpenSLP 0.7.7 ***

10/11/00 mpeterson@caldera.com
Rewrote the README file and removed README.CVS.

10/11/00 mpeterson@caldera.com
Made changes to configure.in so that new predicate code is not build by
default.  Also added old predicate code back in (behind #ifdefs) so that at